--- a/app/views/index.html
+++ b/app/views/index.html
@@ -1,7 +1,3 @@
-<img class="pull-left" src="http://barcampchs.org/sites/all/themes/barcampchs/logo.png" />
-<div class="hero-unit">
-  <h1></h1>
-</div>
 <div class="container">
 <table class="table">
   <tr>
@@ -9,14 +5,14 @@
     <th>Session</th>
     <th>Presenter</th>
     <th>Votes</th>
-    <th><a href="#"><i class="icon-plus"></i></a></th>
+    <th><a href="#/new"><i class="icon-plus"></i></a></th>
   </tr>
   <tr>
-    <td><a href="#"><i class="icon-thumbs-up"></i></a></td>
+    <td><a href="#/vote"><i class="icon-thumbs-up"></i></a></td>
     <td>AngularJS</td>
     <td>Tom Wilson</td>
     <td>100</td>
-    <td><a href="#"><i class="icon-pencil"></i></a></td>
+    <td><a href="#/edit/1"><i class="icon-pencil"></i></a></td>
   </tr>
 </table>
 </div>
