--- a/app/views/vote.html
+++ b/app/views/vote.html
@@ -1,14 +1,15 @@
-<div class="hero-unit">
-  <h1>Vote</h1>
-  <div class="pull-right">
-    <button class="btn">Home</button>
+<form class="offset1 span8">
+  <legend>Vote for Session</legend>
+  <div class="hint">
+    Only one vote per twitter account!
   </div>
-</div>
-<form>
   <label>Session</label>
-  <select></select>
+  <input type="text"></input>
+
   <label>Twitter Handle</label>
   <input type="text"></input>
-  <button class="btn btn-primary">Vote</button>
-  <button class="btn">Cancel</button>
+  <p style="margin-top: 20px;">
+    <button class="btn btn-primary">Vote</button>
+    <a href="/" class="btn">Cancel</a>
+  </p>
 </form>
