--- a/app/views/session.html
+++ b/app/views/session.html
@@ -1,14 +1,14 @@
-<div class="hero-unit">
-  <h1>Add Session</h1>
-  <div class="pull-right">
-    <button class="btn">Home</button>
-  </div>
-</div>
-<form>
-  <label>Name</label>
+<div class="container">
+<form class="offset1 span8">
+  <legend>Add New Session</legend>
+  <label>Session</label>
   <input type="text"></input>
+
   <label>Presenter</label>
   <input type="text"></input>
+  <p style="margin-top: 20px;">
   <button class="btn btn-primary">Create</button>
-  <button class="btn">Cancel</button>
+  <a href="/" class="btn">Cancel</a>
+  </p>
 </form>
+</div>
