--- a/app/views/vote.html
+++ b/app/views/vote.html
@@ -4,12 +4,12 @@
     Only one vote per twitter account!
   </div>
   <label>Session</label>
-  <input type="text"></input>
+  <input type="text" ng-model="session.name" ng-disabled></input>
 
   <label>Twitter Handle</label>
-  <input type="text"></input>
+  <input type="text" ng-model="user"></input>
   <p style="margin-top: 20px;">
-    <button class="btn btn-primary">Vote</button>
+    <button class="btn btn-primary" ng-click="vote()">Vote</button>
     <a href="/" class="btn">Cancel</a>
   </p>
 </form>
