add mongo service

--- a/app/views/index.html
+++ b/app/views/index.html
@@ -11,8 +11,8 @@
     <td>{{session.name}}</td>
     <td>{{session.presenter}}</td>
     <td>{{session.voters.length}}</td>
-    <td><a href="#/vote/{{session.id}}"><i class="icon-thumbs-up"></i></a></td>
-    <td><a href="#/edit/{{session.id}}"><i class="icon-pencil"></i></a></td>
+    <td><a href="#/vote/{{session._id.$oid}}"><i class="icon-thumbs-up"></i></a></td>
+    <td><a href="#/edit/{{session._id.$oid}}"><i class="icon-pencil"></i></a></td>
   </tr>
 </table>
 </div>
