--- a/app/views/session.html
+++ b/app/views/session.html
@@ -7,8 +7,10 @@
   <label>Presenter</label>
   <input type="text" ng-model="session.presenter"></input>
   <p style="margin-top: 20px;">
-  <button class="btn btn-primary" ng-click="save()">Create</button>
+  <button class="btn btn-primary" ng-click="save()">{{buttonName}}</button>
   <a href="/" class="btn">Cancel</a>
+  <button ng-click="destroy()"
+    ng-show="session._id" class="btn btn-danger">Delete</button>
   </p>
 </form>
 </div>
