--- a/public/app/views/vote.html
+++ b/public/app/views/vote.html
@@ -1,3 +1,6 @@
+<div ng-show="message">
+  {{message}}
+</div>
 <form class="offset1 span8">
   <legend>Vote for Session</legend>
   <div class="hint">
